--- a/index.html
+++ b/index.html
@@ -157,6 +157,33 @@ form button {
   <title>Demo ReShared</title>
   
 <style>
+/* Membungkus login agar center penuh halaman */
+.login-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* full tinggi layar */
+  background-color: #f9f9f9;
+}
+
+/* Pastikan tidak ada padding besar di class page */
+.page {
+  display: none;
+  padding: 0;
+}
+
+/* Login Box tetap seperti sebelumnya */
+.login-box {
+  background: white;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #ccc;
+  width: 100%;
+  max-width: 350px;
+  text-align: center;
+}
+
+
   .logo-circle {
   width: 40px;
   height: 40px;
@@ -185,7 +212,7 @@ form button {
   box-shadow: 0 0 10px #ccc;
   width: 100%;
   max-width: 350px;
-  text-align: center;
+  text-align:center;
 }
 
 .login-box h1 {
@@ -227,7 +254,7 @@ form button {
 .login-box button {
   width: 100%;
   padding: 0.8rem;
-  background: #3b3850;
+  background: #000033;
   color: white;
   border: none;
   border-radius: 5px;
@@ -236,7 +263,7 @@ form button {
 }
 
 .login-box button:hover {
-  background: #97989a;
+  background: #000033;
 }
 
     body { font-family: Arial, sans-serif; }
@@ -357,28 +384,29 @@ form button {
   <!-- Form pencarian -->
   <form id="formCariBarang" style="margin-top: 1rem; margin-bottom: 2rem;">
     <input type="text" placeholder="Cari barang..." style="padding: 0.5rem; width: 200px;">
-    <select id="filterKategori" onchange="filterBarang()">
-       <option value="">Pilih Kategori</option>
-       <option value="Furnitur">Furnitur</option>
-       <option value="Pakaian">Pakaian</option>
-       <option value="Perabot">Perabot</option>
-       <option value="Mainan">Mainan</option>
-  </select>
+     <select id="filterKategori" onchange="filterBarang()">
+      <option value="">Pilih Kategori</option>
+      <option value="Furnitur">Furnitur</option>
+      <option value="Pakaian">Pakaian</option>
+      <option value="Perabot">Perabot</option>
+      <option value="Mainan">Mainan</option>
+    </select>
     <select id="filterLokasi" onchange="filterBarang()">
-       <option value="">Pilih Lokasi</option>
-       <option value="Jakarta">Jakarta</option>
-       <option value="Bogor">Bogor</option>
-       <option value="Bandung">Bandung</option>
-       <option value="Surabaya">Surabaya</option>
-       <option value="Makassar">Makassar</option>
-       <option value="Bekasi">Bekasi</option>
-       <option value="Malang">Malang</option>
-       <option value="Kendari">Kendari</option>
-       <option value="Sukabumi">Sukabumi</option>
-   </select>
-
+      <option value="">Pilih Lokasi</option>
+      <option value="Jakarta">Jakarta</option>
+      <option value="Bogor">Bogor</option>
+      <option value="Bandung">Bandung</option>
+      <option value="Surabaya">Surabaya</option>
+      <option value="Makassar">Makassar</option>
+      <option value="Bekasi">Bekasi</option>
+      <option value="Malang">Malang</option>
+      <option value="Kendari">Kendari</option>
+      <option value="Sukabumi">Sukabumi</option>
+    </select>
     <button type="submit" style="padding: 0.5rem 1rem;">Cari</button>
   </form>
+
+<div id="hasilBarang" class="barang-list"></div>
 
   <!-- Daftar barang -->
   <h3 style="margin-bottom: 1rem;">Barang Bekas Terbaru</h3>
@@ -448,23 +476,26 @@ form button {
 
 <!-- LOGIN -->
 <section id="login" class="page">
-  <div class="login-box">
-    <div class="logo-reshared" style="display: flex; align-items: center;">
-    <div class="logo-circle">♻</div>
-    <span class="logo-text">ReShared</span>
-  </div>
-    <h2>Login</h2>
-    <form id="loginForm">
-      <input type="email" placeholder="Alamat Email" required>
-      <input type="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-    </form>
-    <div class="links" style="margin-top: 1rem; font-size: 0.9rem;">
-      <p>Belum punya akun? <a href="#" onclick="showPage('register')">Daftar</a></p>
+  <div class="login-wrapper">
+    <div class="login-box">
+      <div class="logo-reshared" style="display: flex; align-items: center; justify-content: center; margin-bottom: 1rem;">
+        <div class="logo-circle">♻</div>
+        <span class="logo-text">ReShared</span>
+      </div>
+      <h2>Login</h2>
+      <form id="loginForm">
+        <input type="email" placeholder="Alamat Email" required>
+        <input type="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+      </form>
+      <div class="links" style="margin-top: 1rem; font-size: 0.9rem;">
+        <p>Belum punya akun? <a href="#" onclick="showPage('register')">Daftar</a></p>
+      </div>
+      <div id="loginMessage" style="margin-top: 2rem;"></div>
     </div>
-    <div id="loginMessage" style="margin-top: 2rem;"></div>
   </div>
 </section>
+
 
 <section id="register" class="page" style="display: none;">
   <div style="max-width: 400px; margin: auto; background: #ffffff; padding: 2rem; border-radius: 12px; box-shadow: 0 0 15px rgba(0,0,0,0.1); text-align: center;">
@@ -620,6 +651,51 @@ document.getElementById('registerForm').addEventListener('submit', function(e) {
 });
 </script>
 <script>
+
+
+// Fungsi menampilkan barang
+function tampilkanBarang(data) {
+  const container = document.getElementById("hasilBarang");
+  container.innerHTML = "";
+
+  if (data.length === 0) {
+    container.innerHTML = "<p>Tidak ada barang ditemukan.</p>";
+    return;
+  }
+
+  data.forEach(barang => {
+    container.innerHTML += `
+      <div class="barang">
+        <img src="${barang.gambar}" alt="${barang.nama}" style="width: 100px; height: 100px; object-fit: cover;"><br>
+        <strong>${barang.nama}</strong><br>
+        <small>${barang.kategori} - ${barang.lokasi}</small>
+      </div>
+    `;
+  });
+}
+
+// Fungsi filter
+function filterBarang() {
+  const kategori = document.getElementById("filterKategori").value;
+  const lokasi = document.getElementById("filterLokasi").value;
+
+  const hasil = semuaBarang.filter(b => {
+    const cocokKategori = kategori === "" || b.kategori === kategori;
+    const cocokLokasi = lokasi === "" || b.lokasi === lokasi;
+    return cocokKategori && cocokLokasi;
+  });
+
+  tampilkanBarang(hasil);
+}
+
+// Tampilkan semua saat pertama kali
+window.onload = () => tampilkanBarang(semuaBarang);
+</script>
+
+</html>
+
+
+<script>
   function showPage(id) {
     document.querySelectorAll('.page').forEach(p => p.style.display = 'none');
     const target = document.getElementById(id);
@@ -664,6 +740,54 @@ document.getElementById('registerForm').addEventListener('submit', function(e) {
     chatBox.scrollTop = chatBox.scrollHeight;
   }
 </script>
-
 </body>
-</html>
+<script>
+const semuaBarang = [
+  { nama: "Kursi Makan", kategori: "Furnitur", lokasi: "Jakarta", gambar: "krsi.jpg" },
+  { nama: "Baju", kategori: "Pakaian", lokasi: "Bogor", gambar: "bju.jpg" },
+  { nama: "Rak Buku", kategori: "Furnitur", lokasi: "Bandung", gambar: "rak.jpg" },
+  { nama: "Bantal", kategori: "Perabot", lokasi: "Surabaya", gambar: "bantal.jpg" },
+  { nama: "Selimut", kategori: "Perabot", lokasi: "Makassar", gambar: "selimut.jpg" },
+  { nama: "Tas", kategori: "Pakaian", lokasi: "Bekasi", gambar: "tas.jpg" },
+  { nama: "Lemari", kategori: "Perabot", lokasi: "Malang", gambar: "lemari.jpg" },
+  { nama: "Mainan", kategori: "Mainan", lokasi: "Kendari", gambar: "mainan.jpg" },
+  { nama: "Sepeda", kategori: "Perabot", lokasi: "Sukabumi", gambar: "sepeda.jpg" }
+];
+
+function tampilkanBarang(barangArray) {
+  const container = document.getElementById("hasilBarang");
+  container.innerHTML = "";
+
+  if (barangArray.length === 0) {
+    container.innerHTML = "<p>Tidak ada barang ditemukan.</p>";
+    return;
+  }
+
+  barangArray.forEach(barang => {
+    container.innerHTML += `
+      <div class="barang">
+        <img src="${barang.gambar}" alt="${barang.nama}" style="width: 100px; height: 100px; object-fit: cover; border-radius: 8px;">
+        <p><strong>${barang.nama}</strong></p>
+        <p>${barang.kategori} - ${barang.lokasi}</p>
+      </div>
+    `;
+  });
+}
+
+function filterBarang() {
+  const kategori = document.getElementById("filterKategori").value;
+  const lokasi = document.getElementById("filterLokasi").value;
+
+  const hasil = semuaBarang.filter(b =>
+    (kategori === "" || b.kategori === kategori) &&
+    (lokasi === "" || b.lokasi === lokasi)
+  );
+
+  tampilkanBarang(hasil);
+}
+
+// Tampilkan semua saat pertama dibuka
+window.onload = () => tampilkanBarang(semuaBarang);
+</script>
+
+
